--- a/laravel/.env
+++ b/laravel/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="NEPSE TRADING ANALYSIS"
 APP_ENV=local
 APP_KEY=base64:SRwoqB8zKnOZrH1LgmxjlejjlGYP1h3SLfSJC6I/mu0=
 APP_DEBUG=true
