Added trader extensions on workspace and php-fpm containers

--- a/laradock/php-fpm/Dockerfile
+++ b/laradock/php-fpm/Dockerfile
@@ -126,9 +126,16 @@ RUN if [ ${INSTALL_GNUPG} = true ]; then \
       php -m | grep -q 'gnupg'; \
     fi
 
+###########################################################################
+# Trader:
+###########################################################################
 
-RUN pecl install trader; \           
-  docker-php-ext-enable trader;
+ARG INSTALL_TRADER=false
+
+RUN if [ ${INSTALL_TRADER} = true ]; then \
+      pecl install trader; \           
+      docker-php-ext-enable trader; \
+    fi
 
 ###########################################################################
 # SSH2:
