--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "editor.formatOnSave": true,
-    "vetur.format.defaultFormatter.html": "js-beautify-html"
+    "[dockerfile]": {
+        "editor.formatOnSave": false
+    },
+    "vetur.format.defaultFormatter.js": "prettier-eslint"
 }
