--- a/laradock/.env
+++ b/laradock/.env
@@ -111,6 +111,7 @@ WORKSPACE_NPM_FETCH_RETRIES=2
 WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
 WORKSPACE_NPM_FETCH_RETRY_MINTIMEOUT=10000
 WORKSPACE_NPM_FETCH_RETRY_MAXTIMEOUT=60000
+WORKSPACE_INSTALL_TRADER=true
 WORKSPACE_INSTALL_PNPM=false
 WORKSPACE_INSTALL_YARN=true
 WORKSPACE_YARN_VERSION=latest
@@ -206,6 +207,7 @@ WORKSPACE_INSTALL_MEMCACHED=true
 
 PHP_FPM_BASE_IMAGE_TAG_PREFIX=latest
 PHP_FPM_INSTALL_BCMATH=true
+PHP_FPM_INSTALL_TRADER=true
 PHP_FPM_INSTALL_MYSQLI=true
 PHP_FPM_INSTALL_INTL=true
 PHP_FPM_INSTALL_IMAGEMAGICK=true
