--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         - BASE_IMAGE_TAG_PREFIX=${WORKSPACE_BASE_IMAGE_TAG_PREFIX}
         - LARADOCK_PHP_VERSION=${PHP_VERSION}
         - LARADOCK_PHALCON_VERSION=${PHALCON_VERSION}
+        - INSTALL_TRADER=${WORKSPACE_INSTALL_TRADER}
         - INSTALL_SUBVERSION=${WORKSPACE_INSTALL_SUBVERSION}
         - INSTALL_BZ2=${WORKSPACE_INSTALL_BZ2}
         - INSTALL_GMP=${WORKSPACE_INSTALL_GMP}
@@ -166,6 +167,7 @@ services:
         - LARADOCK_PHP_VERSION=${PHP_VERSION}
         - LARADOCK_PHALCON_VERSION=${PHALCON_VERSION}
         - INSTALL_BZ2=${PHP_FPM_INSTALL_BZ2}
+        - INSTALL_TRADER=${PHP_FPM_INSTALL_TRADER}
         - INSTALL_ENCHANT=${PHP_FPM_INSTALL_ENCHANT}
         - INSTALL_GMP=${PHP_FPM_INSTALL_GMP}
         - INSTALL_GNUPG=${PHP_FPM_INSTALL_GNUPG}
